# rememberli

./: .gitignore  Dockerfile.linux  README.md  index.html  package-lock.json  package.json  vite.config.js  vue.config.js
.github/workflows/: build.yml
public/: index.html
public/fonts/: fonts.css  nunito-sans-v8-latin-italic.eot  source-sans-pro-v18-latin-300.eot  source-sans-pro-v18-latin-300italic.eot
src/: App.vue  background.js  main.js  preload.js  styles.css  update.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/common/: CheckBox.vue  Combo.vue  DatePicker.vue  Dialog.vue  DropDown.vue  RadioList.vue  TagList.vue
src/components/: Add.vue  AlarmDialog.vue  CodeVariableDialog.vue  CreateDialog.vue  FolderDialog.vue  HelpDialog.vue  KnowledgeGraph.vue  Logo.vue  Note.vue  SettingsDialog.vue  SideBar.vue  SimpleNote.vue  TextAreaNote.vue  Toolbar.vue  TypeAhead.vue
src/desktop/: SidebarActions.vue  Splash.vue
src/i18n/: en.json
src/router/: index.js
src/scss/: add.scss  alarm.scss  animation.scss  app.scss  check.scss  code_variable.scss  combo.scss  date-picker.scss  dialog.scss  dropdown.scss  ds.scss  editor.scss  help.scss  highlight.scss  input.scss  knowledge-graph.scss  layout.scss  logo.scss  note-timeline.scss  note.scss  radio.scss  settings.scss  sidebar.scss  splash.scss  tab.scss  taglist.scss  theme-bw.scss  theme-clean.scss  theme-dark.scss  theme-soft.scss  toolbar.scss  tooltip.scss  type-ahead.scss
src/services/: APIBackend.js  APILogger.js  APIService.js  APIServiceElectron.js  APIServiceTauri.js  HistoryService.js  RememberLi.js  SearchService.js  Services.js  UndeService.js
src/util/: Animation.js  Highlighter.js  Logger.js  Util.js
(+5 files in other folders)
