[package]
name = "rememberli"
version = "2.0.1"
description = "RememberLI - A simple note app for nerds"
authors = ["Klaus Schaefers"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gline-rs = "1"
orp = "0.9"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
dirs = "5"
tokio = { version = "1", features = ["fs"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
